--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="header">
          <nav class="navbar">
               <a href="index.html" class="logo">
-            <img src="image/3-Photoroom.png" alt="">
+            <img src="3-Photoroom.png" alt="">
               </a>
               <ul class="nav-links">
                  <li><a href="#">Home</a></li>
@@ -34,14 +34,14 @@
              <a href="index.html">Passer à l'action</a>
           </div>
           <div class="box Rachida-acolyte">
-            <img src="image/1-Photoroom.png" alt="">
+            <img src="1-Photoroom.png" alt="">
           </div>
          </div>
     </section>
 
     <div class="infos-page">
       <div class="party-one">
-        <img src="image/sous-img/logo-title.png" alt="">
+        <img src="sous-img/logo-title.png" alt="">
       </div>
       <div class="party-two">
         <h1>Votre Habillement. <br>
@@ -63,56 +63,56 @@
   </div>
 <div class="caroosell">
         <a href="#" class="items">
-          <img src="femme/max (3).jpeg" alt="femme image">
+          <img src="max (3).jpeg" alt="femme image">
           <div class="color">
             <div>
             <h3>feminin</h3>
-            <img src="image/plus.png" alt="">
+            <img src="plus.png" alt="">
             </div>
           </div>
         </a>
         <a href="#" class="items">
-          <img src="homme/hom (3).jpeg" alt="vêtements pour homme">
+          <img src="hom (3).jpeg" alt="vêtements pour homme">
           <div class="color">
             <div>
               <h3>masculin</h3>
-            <img src="image/plus.png" alt="">
+            <img src="plus.png" alt="">
             </div>
           </div>
         </a>
         <a href="#" class="items">
-          <img src="enfants/enj (7).jpeg" alt="image des enfans">
+          <img src="enj (7).jpeg" alt="image des enfans">
           <div class="color">
             <div>
               <h3>enfants</h3>
-              <img src="image/plus.png" alt="">  
+              <img src="plus.png" alt="">  
             </div>
           </div>
         </a>
         <a href="#" class="items">
-          <img src="femme/max (11).jpeg" alt="accessoire hommme">
+          <img src="max (11).jpeg" alt="accessoire hommme">
           <div class="color">
             <div>
               <h3>accessoires</h3>
-              <img src="image/plus.png" alt="">  
+              <img src="plus.png" alt="">  
             </div>
           </div>
         </a>
         <a href="#" class="items">
-          <img src="femme/max (14).jpeg" alt="basket-pour-homme">
+          <img src="max (14).jpeg" alt="basket-pour-homme">
           <div class="color">
            <div>
             <h3>basket</h3>
-            <img src="image/plus.png" alt="">
+            <img src="plus.png" alt="">
            </div>
           </div>
         </a>
         <a href="#" class="items">
-          <img src="femme/max (23).jpeg"  alt="femme-bas">
+          <img src="max (23).jpeg"  alt="femme-bas">
           <div class="color">
             <div>
               <h3>chaussure</h3>
-            <img src="image/plus.png" alt="">
+            <img src="plus.png" alt="">
             </div>
           </div>
         </a>
